<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userActivity"
        android:title="@string/bottom_navigation_user"
        android:enabled="true"
        android:icon="@drawable/ic_person"/>

    <item
        android:id="@+id/homeFragment"
        android:title="@string/bottom_navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_movie_home"/>

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/bottom_navigation_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_home"/>

    <item
        android:id="@+id/categoriesFragment"
        android:title="@string/bottom_navigation_categories"
        android:enabled="true"
        android:icon="@drawable/ic_categories"/>

</menu>