<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_shape_poster">

    <com.amandaluz.movieapplication.util.flipper.PosterFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@id/dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="2dp"
        android:padding="2dp"
        android:text="@string/tv_close"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/flipper"
        app:layout_constraintTop_toTopOf="@id/flipper" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/next_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/next_button"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/flipper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/flipper" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/previous_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/previous_button"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_previous"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/flipper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/flipper" />

    <com.amandaluz.ui.customView.dots.CustomDotsLine
        android:id="@+id/dots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btn_advance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_advance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/btn_shape_outlined"
        android:text="@string/btn_advance"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>