<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_toolbar">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:src="@drawable/tmdb_logo_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/box_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_user_email_layout"
            style="@style/Theme.MovieApplication.FormatTextInput"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_email_edit"
                style="@style/Theme.MovieApplication.FormatEditText"
                android:maxLines="1"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:hint="@string/enter_your_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/Theme.MovieApplication.FormatTextInput"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit"
                style="@style/Theme.MovieApplication.FormatEditText"
                android:inputType="number|textNoSuggestions"
                android:maxLines="1"
                android:hint="@string/enter_your_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:textAllCaps="false" />
    </LinearLayout>

    <com.amandaluz.ui.customView.loading.LoadingButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:customBackgroundColor="@color/background_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_input_text"
        app:strokeColor="@color/background_page_secondary"
        app:strokeWidth="1dp"
        app:text="Login" />

</androidx.constraintlayout.widget.ConstraintLayout>